fixed the prev and next icon and made it more visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,4 +60,14 @@ body {
     object-fit: contain;
     width: 100%;
   }
-  
+  .carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: #d63384; 
+  border-radius: 50%; 
+  height: 40px; 
+  width: 40px;
+}
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+  background-color: #e83e8c; 
+}
